# api/swagger/swagger.yaml
@@ -107,6 +107,7 @@ paths:
               $ref: "#/definitions/Interests"        
            
   /api/secure/events:
+  
     x-swagger-router-controller: Event
     get:
      tags:
@@ -129,6 +130,71 @@ paths:
         type: array
         items:
          $ref: "#/definitions/Event"
+         
+  /api/secure/events/{id}:
+    
+    x-swagger-router-controller: Event
+    get:
+     tags:
+      - "Event"
+     operationId: attendEvent
+     parameters:
+      - name: udid
+        in: header
+        description: User's udid
+        type: string
+      - name: Authorization
+        in: header
+        description: User's authorization
+        required: false
+        type: string
+      - name: id
+        in: path
+        type: string
+        required: true
+        description: Event id
+     responses:
+      "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/CommonResponse"
+            
+            
+    post:
+     tags:
+      - "Event"
+     operationId: addWallEntry
+     parameters:
+      - name: udid
+        in: header
+        description: User's udid
+        type: string
+      - name: Authorization
+        in: header
+        description: User's authorization
+        required: false
+        type: string
+      - name: id
+        in: path
+        type: string
+        required: true
+        description: Event id 
+      - name: Wall Entry
+        in: body
+        required: true
+        schema:
+         $ref: "#/definitions/WallEntry"
+     responses:
+      "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/CommonResponse"        
+            
+            
+       
+    
       
   
 
@@ -210,7 +276,11 @@ definitions:
     location:
      type: string
     
-    
+  
+  WallEntry:
+   properties:
+    text:
+     type: string
    
     
   
